--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,18 +4,25 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --foreground: #1a1a1a;
+  --secondarytext: #959595;
+  --cardbackground: #f5f5f5;
+  --primaryaccent: #ec39b7;
+  --secondaryaccent: #018786;
+  --error: #b00020;
+  --hoverfocus: #d8d8d8;
+  --border: #e0e0e0;
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+* {
+  /* outline: 1px solid red; */
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
